--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     padding: 1rem;
     box-shadow: 2px 2px 0 0 rgba(50, 45, 67, 0.2);
+    margin:1rem;
    
 }
 .card-left{
@@ -57,7 +58,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;c
+    justify-content: center;
 }
 .profile-img{
     height: 100%;
