--- a/src/Skeleton/Skeleton.css
+++ b/src/Skeleton/Skeleton.css
@@ -75,3 +75,10 @@
     background-color: rgb(210, 210, 210);
     
 }
+.heading-sk{
+    height:2rem;
+    width:100px;
+    background-color:rgb(220, 217, 217);
+    animation:skeleton 1s ease infinite alternate;
+
+}
